# jasmine-math

./: Cargo.toml  LICENSE  README.md
examples/func_test/: main.rs
src/: algebra.rs  angle.rs  bivector3.rs  bivector4.rs  euler.rs  flector4.rs  lib.rs  macros.rs  matrix.rs  motor.rs  motor4.rs  point.rs  prelude.rs  quaternion.rs  structure.rs  transform.rs  trivector4.rs  vector.rs  vector_simd.rs
src/consts/: f32.rs  mod.rs
src/core/: component.rs  vector.rs  vector2d.rs
tests/: vector.rs
